--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "bootstrap": "^5.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
   }
