--- a/api/package.json
+++ b/api/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "energialy",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Energialy",
   "license": "ISC",
+  "engines": {
+    "node": ">=12.18.3",
+    "npm": ">=6.14.6"
+  },
   "dependencies": {
-    "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
+    "pg": "^8.5.1",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "supertest-session": "^4.1.0",
+    "mocha": "^8.2.1",
+    "chai": "^4.2.0",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   }
 }
