--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "next-themes": "^0.2.1",
     "autoprefixer": "10.4.15",
     "bootstrap": "^5.3.1",
     "eslint": "8.47.0",
