--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3"
