--- a/api/package.json
+++ b/api/package.json
@@ -20,8 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^126.0.1",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.4",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
