--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
