--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "tw-elements": "^1.0.0"
   }
 }
