--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
+    "@material-tailwind/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
