--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.16",
     "@material-tailwind/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
@@ -32,6 +33,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3",
-    "tw-elements": "^1.0.0"
+    "tw-elements": "^1.0.0",
+    "uploadthing": "^5.6.1"
   }
 }
