--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@headlessui/react": "^1.7.16",
     "@material-tailwind/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "fs-extra": "^11.1.1",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
@@ -33,6 +35,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3",
+    "tinymce": "^6.7.0",
     "tw-elements": "^1.0.0",
     "uploadthing": "^5.6.1"
   }
