--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "fs-extra": "^11.1.1",
