--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "fs-extra": "^11.1.1",
+    "jspdf": "^2.5.1",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
