--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.10.1",
     "tailwindcss": "3.3.3",
     "tinymce": "^6.7.0",
     "tw-elements": "^1.0.0",
