--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.16",
@@ -28,10 +29,12 @@
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
+    "quill": "^1.3.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
