--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tinymce/tinymce-react": "^4.3.0",
     "@uploadthing/react": "^5.6.1",
+    "antd": "^5.17.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
@@ -32,6 +33,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
