--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,9 @@
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
+    "ra-data-simple-rest": "^4.16.17",
     "react": "18.2.0",
+    "react-admin": "^4.16.18",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.6",
@@ -38,6 +40,7 @@
     "react-redux": "^8.1.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.12.7",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.5",
