--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,6 @@
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
     "fs-extra": "^11.1.1",
     "jspdf": "^2.5.1",
     "next": "13.4.16",
@@ -49,5 +48,8 @@
     "tinymce": "^6.7.0",
     "tw-elements": "^1.0.0",
     "uploadthing": "^5.6.1"
+  },
+  "devDependencies": {
+    "eslint-config-next": "^14.2.3"
   }
 }
