--- a/api/package.json
+++ b/api/package.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "resend": "^1.1.0",
